--- a/personal_account.html
+++ b/personal_account.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <!-- <nav>
+            <a href="#">Main</a>
+            <a href="#"></a>
+        </nav> -->
+    </header>
+    <div class="account_info">
+        <h3 class="userName">Lorem Ipsum</h3>
+    </div>
+    <div class="account_cash">
+        <span>VISA Gold 1337:<b> $100</b></span>
+        <br>
+        <span>MasterCard 2003:<b> 1337 CNY</b></span>
+    </div>
+    <div class="account_history" style="margin-top:64px ;">
+        <h2>История покупок</h2>
+        <div class="faaa"><span style="padding-right: 25px;">VISA Gold 1337</span><span>5$ - McDonalds</span></div>
+        <div class="faaa"><span style="padding-right: 25px;">VISA Gold 1337</span><span>23$ - IKEA</span></div>
+        <div class="faaa"><span style="padding-right: 25px;">MasterCard 2003</span><span>$2 - Spotify Premium</span></div>
+    </div>
+
 </body>
 </html>
