--- a/Auth.html
+++ b/Auth.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    
+    <form action="" method="post">
+        <input type="number" name="" id="" placeholder="номер телефона для входа в банк">
+        <br>
+        <input type="number" name="" id="" placeholder="номер карты для входа в банк"><br>
+        <button>Войти</button>
+    </form>
 </body>
 </html>
